# HeronViewer

./: .gitignore  CMakeLists.txt  HeronViewer.sln  README.md
HeronViewer/: .gitignore  .ini  CMakeLists.txt  HeronCatalog.hcatalog  HeronViewer.vcxproj  HeronViewer.vcxproj.filters  Makefile  g.hconf  imgui.ini  preferences.ini  run.bat  stb_image_resize.cpp
HeronViewer/include/: shader.h  shader_c.h
HeronViewer/include/ImGuiFileDialog/: ImGuiFileDialogConfig.h
HeronViewer/include/glad/glad/: glad.h
HeronViewer/include/heron/: Heron.h  HeronImage.h  Widgets.h  Window.h  serialise.h
HeronViewer/include/heron/catalog/: cat_item.h  catalog.h  image_entry.h
HeronViewer/include/heron/common/: SliderValues.h  Utils.h
HeronViewer/include/heron/modules/: Console.h  Curve.h  Editor.h  ExportDialog.h  FileDialog.h  Gallery.h  Graph.h  Histogram.h  Image.h  MainPanel.h  Module.h  Overlay.h  Panel.h  Preferences.h  PreferencesDialog.h  Preview.h  Status.h  Vectorscope.h  Waveform.h  renderable.h
HeronViewer/include/heron/opengl/: gl_texture.h
HeronViewer/include/imgui/: imgui.h
HeronViewer/shaders/: histogram.comp  texture.comp  texture.frag  texture.vert
HeronViewer/src/: Console.cpp  Console.h  Curve.h  Editor.cpp  Editor.h  FileDialog.h  Graph.cpp  Graph.h  Heron.cpp  Heron.h  Histogram.cpp  Histogram.h  Image.cpp  Image.h  MainPanel.cpp  Overlay.cpp  Overlay.h  Preferences.cpp  Preferences.h  SliderValues.h  Status.h  Utils.h  Widgets.cpp  Widgets.h  Window.cpp  Window.h  histogram.comp  main.cpp  texture.comp  texture.frag  texture.fs
HeronViewer/src/ImGuiFileDialog/: ImGuiFileDialog.cpp
HeronViewer/src/glad/glad/: glad.c
HeronViewer/src/heron/: Console.h  Curve.cpp  Curve.h  FileDialog.cpp  Graph.h  Heron.cpp  Heron.h  HeronImage.cpp  Histogram.cpp  Histogram.h  Image.h  Module.h  Widgets.cpp  Window.cpp  main.cpp  texture.comp  texture.vert
HeronViewer/src/heron/catalog/: catalog.cpp  image_entry.cpp
HeronViewer/src/heron/common/: Utils.cpp
HeronViewer/src/heron/modules/: Console.cpp  Curve.cpp  Editor.cpp  ExportDialog.cpp  FileDialog.cpp  Gallery.cpp  Graph.cpp  Histogram.cpp  Image.cpp  MainPanel.cpp  Module.cpp  Overlay.cpp  Preferences.cpp  PreferencesDialog.cpp  Preview.cpp  Status.cpp  Vectorscope.cpp  Waveform.cpp
HeronViewer/src/heron/opengl/: gl_texture.cpp
HeronViewer/src/heron/shaders/: histogram.comp  texture.comp  texture.frag
HeronViewer/src/imgui/: imgui_widgets.cpp
HeronViewer/src/imnodes/: imnodes.cpp
HeronViewer/src/stb/: stb_image_write.cpp  std_image.cpp
